# BenchPress

./: .gitignore  CMakeLists.txt  Makefile  README.md  profile_ping_pong.cu  simple_test.cu  time_allreduce.cu  time_comparison.cu  time_inj_bw.cu  time_memcpy.cu  time_memcpy_all.cu  time_memcpy_all_node.cu  time_memcpy_async.cu  time_memcpy_multiple.cu  time_memcpy_peer.cu  time_node_async.cu  time_node_async_multiple.cu  time_node_ping_pong.cu  time_ping_pong.cu  time_ping_pong_multiple.cu  time_sum.cu
benchmarks/blue_waters/: memcpy_11316017.bw.err  memcpy_11316020.bw.err  memcpy_11316023.bw.err  test_memcpy  test_memcpy_all  test_memcpy_all_node  test_memcpy_ppn  test_memcpy_ppn_partial
benchmarks/lassen/: all_reduce.1389384.out  all_reduce_16.1397155.out  all_reduce_16.1397156.out  all_reduce_16.1397157.out  all_reduce_2.1397164.out  all_reduce_4.1397106.out  all_reduce_8.1397099.out  all_to_all_16.1559133.out  all_to_all_16.1559135.out  all_to_all_2.1559126.out  all_to_all_32.1559138.out  all_to_all_4.1559128.out  all_to_all_8.1559130.out  all_to_all_v_16.1559151.out  all_to_all_v_4.1559142.out  all_to_all_v_8.1559146.out  all_to_all_v_8.1559147.out  all_to_all_v_8.1559148.out  allreduce_script  comparison_script  injbw_script  memcpy.1492533.out  memcpy_mult.1388972.out  memcpy_mult.1389390.out  memcpy_mult.1389391.out  memcpy_mult.1492609.out  memcpy_mult.1492629.out  memcpy_mult.1492644.out  memcpy_mult.1492908.out  memcpy_script  mult_pong.1396727.err  mult_pong.1396727.out  mult_pong.1396755.err  mult_pong.1396755.out  mult_pong.1396756.err  mult_pong.1396756.out  mult_pong_split.1468321.out  node_pong.1396846.out  node_pong.1416352.out  nodeasync_mult_script  (+15 more)
benchmarks/summit/: all_reduce.305650.out  all_reduce_16.315802.out  all_reduce_16.315867.out  all_reduce_16.315868.out  all_reduce_16.315869.out  all_reduce_2.305197.out  all_reduce_2.315877.out  all_reduce_2.315878.out  all_reduce_2.315879.out  all_reduce_32.424081.out  all_reduce_4.315793.out  all_reduce_4.315794.out  all_reduce_4.315874.out  all_reduce_4.315875.out  all_reduce_4.315876.out  all_reduce_8.315796.out  all_reduce_8.315871.out  all_reduce_8.315872.out  all_reduce_8.315873.out  all_to_all_16.417652.out  all_to_all_16.424086.out  all_to_all_4.417650.out  all_to_all_4.424090.out  all_to_all_4.424091.out  all_to_all_v_16.420557.out  all_to_all_v_16.420731.out  all_to_all_v_16.420740.out  all_to_all_v_16.423845.out  all_to_all_v_16.424097.out  all_to_all_v_2.418947.out  all_to_all_v_2.420210.out  all_to_all_v_2.420450.out  all_to_all_v_4.424102.out  all_to_all_v_8.424099.out  all_to_all_v_8.424100.out  maxrate.305655 2.out  maxrate.305655.out  memcpy_mult.305178.out  memcpy_mult.305659 2.out  memcpy_mult.305659.out  (+35 more)
benchmarks/tioga/: all_reduce_4.0.out  all_to_all_4.0.out  alltoallv.0.out  flux_submission.sh  maketest.sh  memcpy.out  memcpy_mult.0.out  memcpy_mult.1.out  mult_pong.0.out  mult_pong.1.out  mult_pong.2.out  mult_pong.3.out  mult_pong_old.out  ping_pong.2.out  ping_pong.out  ping_pong_3step.0.out  test.cpp  test_3step.sh  test_allreduce.sh  test_alltoall.sh  test_alltoallv.sh  test_memcpy.sh  test_memcpy_mult.sh  test_mult_pong.sh  test_mult_pong_split.sh  test_node_pong.sh  test_ping_pong.sh  test_script.sh
examples/: CMakeLists.txt  README.md  output_run_parameters.cpp  time_allreduce.cpp  time_allreduce_standard.cpp  time_alltoall.cpp  time_alltoallv.cpp  time_collective.cpp  time_collective_standard.cpp  time_hv_ping_pong_3step.cpp  time_hv_ping_pong_cpu.cpp  time_hv_ping_pong_gpu.cpp  time_maxrate.cpp  time_memcpy.cpp  time_memcpy_mult.cpp  time_mult_pong.cpp  time_mult_pong_split.cpp  time_node_pong.cpp  time_node_pong_cpu.cpp  time_node_pong_gpu.cpp  time_ping_pong.cpp  time_ping_pong_3step.cpp  time_ping_pong_cpu.cpp  time_ping_pong_gpu.cpp
improve_maxrate/plotting_scripts/: common.py  cpu_nic_ping_pong.py  (+10 more)
plots/: allreduce.py  alltoall.py  alltoallv.py  maxrate.py  memcpy.py  memcpy_mult.py  model.py  model_mvapich.py  mult_msgs.tex  mult_pong.py  mult_pong_split.py  node_pong.py  ping_pong.py  plot_allreduce.py  plot_memcpy.py  plot_memcpy_mult.py  plot_mult_pong.py  plot_node_pong.py  plot_ping_pong.py  prof.py  zfp.out
spmv/: CMakeLists.txt  Makefile  agg_gpu.sh  agg_node.sh  agg_socket.sh  mpi_sparse_mat  mpi_sparse_mat.cu  mpi_sparse_mat_comm_only  suitesparse.sh
src/: CMakeLists.txt  benchpress.hpp  heterobench.hpp
src/collective/: .nfs000000000c8b96cc000123f3  CMakeLists.txt  allreduce_profiler.cpp  allreduce_profiler.cu  allreduce_profiler.h  allreduce_profiler_hip.cpp  allreduce_timer.cpp  allreduce_timer.h  allreduce_timer.hpp  allreduce_timer_hip.cpp  alltoall_profiler.cpp  alltoall_profiler.cu  alltoall_profiler.h  alltoall_profiler_hip.cpp  alltoall_timer.cpp  alltoall_timer.cu  alltoall_timer.h  alltoall_timer.hpp  alltoall_timer_hip.cpp  alltoallv_profiler.cpp  alltoallv_profiler.cu  alltoallv_profiler.h  alltoallv_profiler_hip.cpp  alltoallv_timer.cpp  alltoallv_timer.cu  alltoallv_timer.h  alltoallv_timer.hpp  alltoallv_timer_hip.cpp  collective_profiler.cu  collective_profiler.h  collective_timer.cu  collective_timer.h
src/collective/tests/: CMakeLists.txt  test_allreduce.cpp  test_alltoall.cpp  test_alltoallv.cpp  test_collective.cpp
src/memcpy/: CMakeLists.txt  memcpy_profiler.cpp  memcpy_profiler.cu  memcpy_profiler.h  memcpy_profiler_hip.cpp  memcpy_timer.cpp  memcpy_timer.cu  memcpy_timer.h  memcpy_timer.hpp  memcpy_timer_hip.cpp
src/memcpy/tests/: CMakeLists.txt  test_memcpy.cpp
src/ping_pong/: CMakeLists.txt  ping_pong_profiler.cpp  ping_pong_profiler.cu  ping_pong_profiler.h  ping_pong_profiler.hpp  ping_pong_profiler_hip.cpp  ping_pong_timer.cpp  ping_pong_timer.cu  ping_pong_timer.h  ping_pong_timer.hpp  ping_pong_timer_hip.cpp
src/ping_pong/tests/: CMakeLists.txt  test_ping_pong.cpp
src/spmv/: CMakeLists.txt  spmv.cu  spmv.h  spmv_profiler.cu  spmv_timer.cpp  spmv_timer.h
src/stats/: CMakeLists.txt  stats.cpp  stats.cu  stats.h  stats.hpp  stats_hip.cpp
src/utils/: CMakeLists.txt  utils.hpp  utils_cuda.hpp  utils_hip.hpp
(+543 files in other folders)
