include_directories(${heterobench_INCDIR})

add_executable(time_memcpy time_memcpy.cpp)
target_link_libraries(time_memcpy heterobench)

add_executable(time_memcpy_mult time_memcpy_mult.cpp)
target_link_libraries(time_memcpy_mult heterobench)

add_executable(time_allreduce time_allreduce.cpp)
target_link_libraries(time_allreduce heterobench)

add_executable(time_alltoall time_alltoall.cpp)
target_link_libraries(time_alltoall heterobench)

add_executable(time_alltoallv time_alltoallv.cpp)
target_link_libraries(time_alltoallv heterobench)

add_executable(time_allreduce_standard time_allreduce_standard.cpp)
target_link_libraries(time_allreduce_standard heterobench)

add_executable(time_ping_pong time_ping_pong.cpp)
target_link_libraries(time_ping_pong heterobench)

add_executable(time_maxrate time_maxrate.cpp)
target_link_libraries(time_maxrate heterobench)

add_executable(time_mult_pong time_mult_pong.cpp)
target_link_libraries(time_mult_pong heterobench)

add_executable(time_mult_pong_split time_mult_pong_split.cpp)
target_link_libraries(time_mult_pong_split heterobench)

add_executable(time_node_pong time_node_pong.cpp)
target_link_libraries(time_node_pong heterobench)
