include_directories(${benchpress_INCDIR})
if(NOT USE_HIP)
    set_source_files_properties(time_memcpy.cpp time_memcpy_mult.cpp time_allreduce.cpp time_alltoall.cpp time_alltoallv.cpp time_allreduce_standard.cpp time_ping_pong.cpp time_ping_pong_3step.cpp time_ping_pong_cpu.cpp time_ping_pong_gpu.cpp time_maxrate.cpp time_mult_pong.cpp time_mult_pong_split.cpp time_node_pong.cpp time_node_pong_cpu.cpp time_node_pong_gpu.cpp output_run_parameters.cpp PROPERTIES LANGUAGE CUDA)
endif()

add_executable(time_memcpy time_memcpy.cpp)
target_link_libraries(time_memcpy benchpress)

add_executable(time_memcpy_mult time_memcpy_mult.cpp)
target_link_libraries(time_memcpy_mult benchpress)

add_executable(time_allreduce time_allreduce.cpp)
target_link_libraries(time_allreduce benchpress)

add_executable(time_alltoall time_alltoall.cpp)
target_link_libraries(time_alltoall benchpress)

add_executable(time_alltoallv time_alltoallv.cpp)
target_link_libraries(time_alltoallv benchpress)

add_executable(time_allreduce_standard time_allreduce_standard.cpp)
target_link_libraries(time_allreduce_standard benchpress)

add_executable(time_ping_pong time_ping_pong.cpp)
target_link_libraries(time_ping_pong benchpress)

add_executable(time_ping_pong_3step time_ping_pong_3step.cpp)
target_link_libraries(time_ping_pong_3step benchpress)

add_executable(time_ping_pong_cpu time_ping_pong_cpu.cpp)
target_link_libraries(time_ping_pong_cpu benchpress)

add_executable(time_ping_pong_gpu time_ping_pong_gpu.cpp)
target_link_libraries(time_ping_pong_gpu benchpress)

add_executable(time_maxrate time_maxrate.cpp)
target_link_libraries(time_maxrate benchpress)

add_executable(time_mult_pong time_mult_pong.cpp)
target_link_libraries(time_mult_pong benchpress)

add_executable(time_mult_pong_split time_mult_pong_split.cpp)
target_link_libraries(time_mult_pong_split benchpress)

add_executable(time_node_pong time_node_pong.cpp)
target_link_libraries(time_node_pong benchpress)

add_executable(time_node_pong_cpu time_node_pong_cpu.cpp)
target_link_libraries(time_node_pong_cpu benchpress)

add_executable(time_node_pong_gpu time_node_pong_gpu.cpp)
target_link_libraries(time_node_pong_gpu benchpress)

add_executable(output_run_parameters output_run_parameters.cpp)
target_link_libraries(output_run_parameters benchpress)
